--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,12 @@
 cmake_minimum_required(VERSION 3.0.2)
+project(BPHash CXX)
 
 # The main subdirectory with the bphash library
 add_subdirectory(bphash)
 
 # Directory with some tests
 add_subdirectory(test)
+
+# Create and install the config file
+configure_file("bphashConfig.cmake.in" "bphashConfig.cmake" @ONLY)
+install(FILES ${CMAKE_BINARY_DIR}/bphashConfig.cmake DESTINATION lib/cmake/bphash) 
