Add 32-bit and 64-bit MurmurHash
Also adds benchmark and reference tests, and adds the
clang compiler to the CMake files

--- a/bphash/CMakeLists.txt
+++ b/bphash/CMakeLists.txt
@@ -14,17 +14,27 @@ if("${CMAKE_CXX_COMPILER_ID}" MATCHES "Intel")
     list(APPEND BPHASH_CXX_FLAGS "-std=c++11")
     list(APPEND BPHASH_CXX_FLAGS "-w3")
 
-    #   383  : value copied to temporary, reference to temporary used (generally ok in c++)
-    #   981  : operands are evaluated in unspecified order (generally ok in c++)
-    #   444  : destructor for base class .. not virtual (even warns for classes without virtual functions)
+    #   383  : value copied to temporary, reference to temporary used
+    #   981  : operands are evaluated in unspecified order
     #  1418  : external function definition with no prior declaration
     list(APPEND BPHASH_CXX_FLAGS "-wd383")
     list(APPEND BPHASH_CXX_FLAGS "-wd981")
-    list(APPEND BPHASH_CXX_FLAGS "-wd444")
     list(APPEND BPHASH_CXX_FLAGS "-wd1418")
 elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
     list(APPEND BPHASH_CXX_FLAGS "-std=c++11")
     list(APPEND BPHASH_CXX_FLAGS "-Wall;-Wextra;-pedantic")
+elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
+    list(APPEND BPHASH_CXX_FLAGS "-std=c++11")
+    list(APPEND BPHASH_CXX_FLAGS "-Wall;-Wextra;-pedantic")
+
+    # for heavy-duty testing
+    #list(APPEND BPHASH_CXX_FLAGS "-Weverything")
+    #list(APPEND BPHASH_CXX_FLAGS "-Wno-c++98-compat")
+    #list(APPEND BPHASH_CXX_FLAGS "-Wno-c++98-compat-pedantic")
+    #list(APPEND BPHASH_CXX_FLAGS "-Wno-implicit-fallthrough")
+    #list(APPEND BPHASH_CXX_FLAGS "-Wno-padded")
+    #list(APPEND BPHASH_CXX_FLAGS "-Wno-weak-vtables")
+    #list(APPEND BPHASH_CXX_FLAGS "-Wno-covered-switch-default")
 endif()
   
 
@@ -32,7 +42,9 @@ endif()
 add_library(bphash ${BPHASH_BUILD_TYPE}
                    Hasher.cpp
                    Hash.cpp
-                   MurmurHash3.cpp
+                   MurmurHash3_128.cpp
+                   MurmurHash3_64.cpp
+                   MurmurHash3_32.cpp
            )
 
 # Include the main source directory (my parent) as an include directory
