--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,36 +1,50 @@
 # This is the main library
-add_executable(bphash_test test_integers.cpp
-                           test.cpp
-              )
-
-# Include the main source directory (my parent) as an include directory
-target_include_directories(bphash_test PRIVATE ${CMAKE_SOURCE_DIR})
 
 # Set the compile options
 if("${CMAKE_CXX_COMPILER_ID}" MATCHES "Intel")
     list(APPEND BPHASH_TEST_CXX_FLAGS "-std=c++11")
     list(APPEND BPHASH_TEST_CXX_FLAGS "-w3")
 
-    #   383  : value copied to temporary, reference to temporary used (generally ok in c++)
-    #   981  : operands are evaluated in unspecified order (generally ok in c++)
-    #  3291  : invalid narrowing conversion (done on purpose in testing sources)
-    #  1418  : external function definition with no prior declaration (generally ok)
-    #  2259  : non-pointer conversion from "double" to "float" may lose significant bits
-    #   280  : selector expression is constant (ok)
-    #  1419  : external declaration in primary source file
+    #   383  : value copied to temporary, reference to temporary used
+    #   981  : operands are evaluated in unspecified order
+    #  1418  : external function definition with no prior declaration
     list(APPEND BPHASH_TEST_CXX_FLAGS "-wd383")
     list(APPEND BPHASH_TEST_CXX_FLAGS "-wd981")
-    list(APPEND BPHASH_TEST_CXX_FLAGS "-wd3291")
     list(APPEND BPHASH_TEST_CXX_FLAGS "-wd1418")
-    list(APPEND BPHASH_TEST_CXX_FLAGS "-wd2259")
-    list(APPEND BPHASH_TEST_CXX_FLAGS "-wd280")
-    list(APPEND BPHASH_TEST_CXX_FLAGS "-wd1419")
 elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
     list(APPEND BPHASH_TEST_CXX_FLAGS "-std=c++11")
     list(APPEND BPHASH_TEST_CXX_FLAGS "-Wall;-Wextra;-pedantic")
-    list(APPEND BPHASH_TEST_CXX_FLAGS "-Wno-narrowing")  # done on purpose in the testing sources
+elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
+    list(APPEND BPHASH_TEST_CXX_FLAGS "-std=c++11")
+    list(APPEND BPHASH_TEST_CXX_FLAGS "-Wall;-Wextra;-pedantic")
+
+    # for heavy-duty testing
+    #list(APPEND BPHASH_TEST_CXX_FLAGS "-Weverything")
+    #list(APPEND BPHASH_TEST_CXX_FLAGS "-Wno-c++98-compat")
+    #list(APPEND BPHASH_TEST_CXX_FLAGS "-Wno-c++98-compat-pedantic")
+    #list(APPEND BPHASH_TEST_CXX_FLAGS "-Wno-implicit-fallthrough")
+    #list(APPEND BPHASH_TEST_CXX_FLAGS "-Wno-padded")
+    #list(APPEND BPHASH_TEST_CXX_FLAGS "-Wno-weak-vtables")
+    #list(APPEND BPHASH_TEST_CXX_FLAGS "-Wno-covered-switch-default")
 endif()
 
 
-target_compile_options(bphash_test PRIVATE ${BPHASH_TEST_CXX_FLAGS})
-target_link_libraries(bphash_test PRIVATE bphash)
+#add_executable(bphash_test test_integers.cpp
+#                           test.cpp
+#              )
+#
+#target_include_directories(bphash_test PRIVATE ${CMAKE_SOURCE_DIR})
+#target_compile_options(bphash_test PRIVATE ${BPHASH_TEST_CXX_FLAGS})
+#target_link_libraries(bphash_test PRIVATE bphash)
+
+
+
+add_executable(bphash_reftest reftest.cpp MurmurHash3_reference.cpp)
+target_include_directories(bphash_reftest PRIVATE ${CMAKE_SOURCE_DIR})
+target_compile_options(bphash_reftest PRIVATE ${BPHASH_TEST_CXX_FLAGS})
+target_link_libraries(bphash_reftest PRIVATE bphash)
+
+add_executable(bphash_benchmark benchmark.cpp MurmurHash3_reference.cpp)
+target_include_directories(bphash_benchmark PRIVATE ${CMAKE_SOURCE_DIR})
+target_compile_options(bphash_benchmark PRIVATE ${BPHASH_TEST_CXX_FLAGS})
+target_link_libraries(bphash_benchmark PRIVATE bphash)
