--- a/bphash/CMakeLists.txt
+++ b/bphash/CMakeLists.txt
@@ -11,6 +11,12 @@ add_library(bphash ${BPHASH_BUILD_TYPE}
 # Include the main source directory (my parent) as an include directory
 target_include_directories(bphash PRIVATE ${CMAKE_SOURCE_DIR})
 
+# Enable position-independent code?
+# Should be safe to enable for shared as well
+if(BPHASH_BUILD_PIC)
+    set_property(TARGET bphash PROPERTY POSITION_INDEPENDENT_CODE True)
+endif()
+
 # Where to install the library
 install(TARGETS bphash
         LIBRARY DESTINATION lib
