Better exported cmake config files

--- a/bphash/CMakeLists.txt
+++ b/bphash/CMakeLists.txt
@@ -12,9 +12,13 @@ target_include_directories(bphash PRIVATE ${CMAKE_SOURCE_DIR})
 
 # Where to install the library
 install(TARGETS bphash
-        LIBRARY DESTINATION lib
-        ARCHIVE DESTINATION lib)
+        EXPORT bphashTargets
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+)
 
 # Install the headers
-install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION include FILES_MATCHING PATTERN "*.hpp")
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+        FILES_MATCHING PATTERN "*.hpp")
 
