--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,12 @@
 cmake_minimum_required(VERSION 3.1.3)
 project(BPHash CXX)
+set(bphash_VERSION 1.1)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_EXTENSIONS False)
+
+# For standard install paths (CMAKE_INSTALL_*DIR)
+include(GNUInstallDirs)
 
 # CMake doesn't support Intel CXX standard until cmake 3.6
 if("${CMAKE_CXX_COMPILER_ID}" MATCHES "Intel")
@@ -29,7 +33,7 @@ elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
 elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
     add_compile_options(-Wall;-Wextra;-pedantic)
 
-    # for heavy-duty testing
+    # comment out for heavy-duty testing
     add_compile_options(-Weverything)
     add_compile_options(-Wno-c++98-compat)
     add_compile_options(-Wno-c++98-compat-pedantic)
@@ -45,7 +49,27 @@ add_subdirectory(bphash)
 # Directory with some tests
 add_subdirectory(test)
 
+####################################
+# Exporting the CMake configuration
+####################################
+include(CMakePackageConfigHelpers)
 
-# Create and install the config file
-configure_file("bphashConfig.cmake.in" "bphashConfig.cmake" @ONLY)
-install(FILES ${CMAKE_BINARY_DIR}/bphashConfig.cmake DESTINATION share/cmake/bphash) 
+configure_package_config_file(bphashConfig.cmake.in
+                              ${CMAKE_CURRENT_BINARY_DIR}/bphashConfig.cmake
+                              INSTALL_DESTINATION share/cmake/bphash
+)
+
+write_basic_package_version_file(${CMAKE_CURRENT_BINARY_DIR}/bphashConfigVersion.cmake
+                                 VERSION ${bphash_VERSION}
+                                 COMPATIBILITY AnyNewerVersion
+)
+
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/bphashConfig.cmake
+        ${CMAKE_CURRENT_BINARY_DIR}/bphashConfigVersion.cmake
+        DESTINATION share/cmake/bphash
+)
+
+install(EXPORT bphashTargets
+        NAMESPACE bphash::
+        DESTINATION share/cmake/bphash
+)
