--- a/bphashConfig.cmake.in
+++ b/bphashConfig.cmake.in
@@ -1,23 +1,31 @@
-# Path to this file and the parent directories
-set(BPHASH_CONFIG_PATH ${CMAKE_CURRENT_LIST_DIR})
-get_filename_component(BPHASH_PREFIX_PATH ${BPHASH_CONFIG_PATH} DIRECTORY)
-get_filename_component(BPHASH_PREFIX_PATH ${BPHASH_PREFIX_PATH} DIRECTORY)
-get_filename_component(BPHASH_PREFIX_PATH ${BPHASH_PREFIX_PATH} DIRECTORY)
+@PACKAGE_INIT@
 
+set(PN bphash)
 
-# The bphash library we want to link to
-find_library(BPHASH_LIBRARY
-             NAMES bphash
-             PATHS ${BPHASH_PREFIX_PATH}/lib
-             NO_DEFAULT_PATH)
+set (_valid_components
+    static
+    shared
+)
 
-# The include directory
-find_path(BPHASH_INCLUDE_PATH
-          NAMES bphash/Hash.hpp
-          PATHS ${BPHASH_PREFIX_PATH}/include
-          NO_DEFAULT_PATH)
+# Location of includes
+set(bphash_INCLUDE_DIR "${PACKAGE_PREFIX_DIR}/@CMAKE_INSTALL_INCLUDEDIR@")
+set(bphash_INCLUDE_DIRS ${bphash_INCLUDE_DIR})
 
-# This interface library
-add_library(bphash INTERFACE)
-target_include_directories(bphash INTERFACE ${BPHASH_INCLUDE_PATH})
-target_link_libraries(bphash INTERFACE ${BPHASH_LIBRARY})
+# Location of libraries
+if(@BUILD_SHARED_LIBS@)
+    set(bphash_LIBRARY "${PACKAGE_PREFIX_DIR}/@CMAKE_INSTALL_LIBDIR@/libbphash${CMAKE_SHARED_LIBRARY_SUFFIX}")
+    set(bphash_shared_FOUND 1)
+else()
+    set(bphash_LIBRARY "${PACKAGE_PREFIX_DIR}/@CMAKE_INSTALL_LIBDIR@/libbphash${CMAKE_STATIC_LIBRARY_SUFFIX}")
+    set(bphash_static_FOUND 1)
+endif()
+set(bphash_LIBRARIES ${bphash_LIBRARY})
+
+check_required_components(bphash)
+
+# Don't include targets if this file is being picked up by another
+# project which has already built this as a subproject
+if(NOT TARGET bphash::bphash)
+    include("${CMAKE_CURRENT_LIST_DIR}/bphashTargets.cmake")
+endif()
+
